[tool.poetry]
name = "toml-parser"
version = "0.1.0"
description = ""
authors = ["Kamaal Farah <kamaal.f1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
polars = "^1.8.2"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
aiohttp = "^3.10.7"
sqlmodel = "^0.0.22"
yfinance = { extras = ["nospam", "repair"], version = "^0.2.48" }
requests-cache = "^1.2.1"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
narwhals = "^1.9.3"
kamaalpy = "^0.1.0"
attrs = "^24.2.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
pydantic-extra-types = "^2.10.0"
pytz = "^2024.2"
altair = { extras = ["all"], version = "^5.4.1" }
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.6.9"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
